fix: truncate the title of products and price of products

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -8,7 +8,7 @@ header {
 }
 
 header > div,
-ul {
+.route-links {
   display: flex;
   justify-content: center;
   align-items: center;
